--- a/com Java/Prática 2/projlivro/modulo-cli/pom.xml
+++ b/com Java/Prática 2/projlivro/modulo-cli/pom.xml
@@ -39,7 +39,7 @@
                                     <mainClass>br.edu.ifpb.cli.MainCLI</mainClass>
                                 </transformer>
                             </transformers>
-                            <finalName>CLI</finalName>
+                            <finalName>projlivro-CLI</finalName>
                         </configuration>
                     </execution>
                 </executions>
