--- a/com Java/Prática 3/ProjBanco/banco/pom.xml
+++ b/com Java/Prática 3/ProjBanco/banco/pom.xml
@@ -11,4 +11,12 @@
 
     <artifactId>banco</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>br.edu.ifpb</groupId>
+            <artifactId>conta</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
