--- a/com Java/Prática 3/ProjBanco/banco/pom.xml
+++ b/com Java/Prática 3/ProjBanco/banco/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ProjBanco</artifactId>
-        <groupId>br.edu.ifpb</groupId>
+        <groupId>br.ifpb.edu</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,10 +13,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>br.edu.ifpb</groupId>
+            <groupId>br.ifpb.edu</groupId>
             <artifactId>conta</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
