--- a/com Java/Prática 3/ProjBanco/conta/pom.xml
+++ b/com Java/Prática 3/ProjBanco/conta/pom.xml
@@ -4,21 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>ProjBanco</artifactId>
-        <groupId>br.edu.ifpb</groupId>
+        <groupId>br.ifpb.edu</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>conta</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
 
 </project>
