ProjBancoCompleto - add Agencia e Cliente

--- a/com Java/Prática 6/ProjBancoCompleto/pom.xml
+++ b/com Java/Prática 6/ProjBancoCompleto/pom.xml
@@ -18,8 +18,10 @@
     <!-- Módulos filhos -->
     <modules>
         <module>banco</module>
-        <module>cli</module>
+        <module>agencia</module>
+        <module>cliente</module>
         <module>conta</module>
+        <module>cli</module>
         <module>gui</module>
     </modules>
 
