--- a/com Java/Prática 6/ProjBancoCompleto/gui/pom.xml
+++ b/com Java/Prática 6/ProjBancoCompleto/gui/pom.xml
@@ -11,35 +11,13 @@
 
     <artifactId>gui</artifactId>
 
-    <!-- Dependências (Bibliotecas externas) -->
     <dependencies>
-        <!-- JavaFX para interface gráfica -->
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
+            <groupId>br.com.guilherme</groupId>
+            <artifactId>banco</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.3</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                    <jlinkImageName>gui</jlinkImageName>
-                    <launcher>launcher</launcher>
-                    <mainClass>${mainGUIClass}</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
