ProjBancoCompleto - add func module

--- a/com Java/Prática 6/ProjBancoCompleto/pom.xml
+++ b/com Java/Prática 6/ProjBancoCompleto/pom.xml
@@ -23,6 +23,7 @@
         <module>conta</module>
         <module>cli</module>
         <module>gui</module>
+        <module>funcionario</module>
     </modules>
 
     <!-- Variáveis Globais -->
