--- a/com Java/Prática 9/proj-signos/pom.xml
+++ b/com Java/Prática 9/proj-signos/pom.xml
@@ -103,34 +103,38 @@
       </plugin>
 
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <id>build-servidor</id>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
             <configuration>
-              <archive>
-                <manifest>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>br.com.guilherme.servidor.MainServidor</mainClass>
-                </manifest>
-              </archive>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-              <finalName>servidorDeSignos.jar</finalName>
+                </transformer>
+              </transformers>
+              <finalName>ServidorDeSignos</finalName>
             </configuration>
           </execution>
           <execution>
             <id>build-cliente</id>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
             <configuration>
-              <archive>
-                <manifest>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>br.com.guilherme.cliente.MainCliente</mainClass>
-                </manifest>
-              </archive>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-              <finalName>clienteDeSignos.jar</finalName>
+                </transformer>
+              </transformers>
+              <finalName>ClienteDeSignos</finalName>
             </configuration>
           </execution>
         </executions>
